--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && cd dist && git add . && git commit -m 'deploy' && git push && cd .."
   },
   "dependencies": {
     "react": "^19.1.0",
